# json-query

./: .gitignore  CMakeLists.txt  Makefile  compile_commands.json
src/: main.c
test/resources/: JohnDoe.json
